<resources>
    <string name="app_name">About Me V3</string>
    <string name="tittle">About Me App V.3</string>
    <string name="lanjut">Continue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Menu</string>
    <string name="alasan">Ya untuk dapat nilai UTS pak</string>
    <string name="nama">Syahnanda Fachri Nst</string>
    <string name="tentang">Bio</string>
    <string name="location">Medan, Indonesia</string>
    <string name="hobby">Hobi : Tidur</string>
    <string name="isibio">Saya adalah mahasiswa STMIK AKAKOM yogyakarta. Saya pendiam, dan introvert,
                          Perilaku orang dengan kepribadian ini terkadang suka disalahartikan sebagai tanda-tanda depresi. Namun sebaiknya jangan terlalu cepat mengambil kesimpulan.
                          Yang perlu dipahami adalah introversion bukanlah suatu respon terhadap rangsangan yang terjadi dari luar,
                          tetapi merupakan suatu tipe kepribadian.</string>
    <string name="header">fotoheader</string>
    <string name="abb">about me :</string>
</resources>
